--- a/public/balatro.html
+++ b/public/balatro.html
@@ -1,44 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src = "balatro.js" type="module"></script>
-<title>Balatrodle</title>
-<head> 
-    <h1>Balatrodle</h1>
-    <button id="startGame">New Game</button>
-    <br>
-    <img id="jokerImage" src = "./images/Hanging_Chad.webp" width="200">
-   <div>
-        <label for="name">Joker Name:</label>      
-        <input type="text" id="name" name="name">
-   <br>
-        <label>Joker Type:</label>
-        <label style="display: inline-block; margin-top: 20px;"> </label>
-        <input type="checkbox"> +Mult
-        <label style="display: inline-block; margin-top: 10px;"> </label>
-        <input type="checkbox"> xMult
-        <label style="display: inline-block; margin-right: 10px;"> </label>
-        <input type="checkbox"> Chips
-        <label style="display: inline-block; margin-right: 10px;"> </label>
-        <input type="checkbox"> Econ
-        <label style="display: inline-block; margin-right: 10px;"> </label>
-        <input type="checkbox"> Util
-   <br>
-        <label>Joker Rarity:</label>
-        <label style="display: inline-block; margin-top: 20px;"> </label>
-        <input type="checkbox"> Common
-        <label style="display: inline-block; margin-right: 10px;"> </label>
-        <input type="checkbox"> Uncommon
-        <label style="display: inline-block; margin-right: 10px;"> </label>
-        <input type="checkbox"> Rare
-        <label style="display: inline-block;"> </label>
-        <input type="checkbox"> Legendary
-        
-   </div>
+<head>
+  <meta charset="UTF-8">
+  <title>Balatrodle</title>
+  <script src="balatro.js" type="module"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <div>
-        <br> <br>
-        <button id="Submit">Submit Answers</button><br><br>
-        <h1 id="answer">True</h1>
-     </div>
+  <div class="container">
+    <h1>Balatrodle</h1>
+    <button id="startGame">New Game</button>
+
+    <img id="jokerImage" class="imgbox" src="./images/Hanging_Chad.webp" width="200" />
+
+    <button id="Submit">Submit Answers</button>
+    <h4 id="answer">True</h4>
+
+    <div class="form-group">
+      <div class="form-section">
+        <label for="name">Joker Name:</label>      
+        <input type="text" id="name" name="name">
+      </div>
+
+      <div class="form-section">
+        <label for="cost">Joker Cost:</label>      
+        <input type="text" id="cost" name="cost">
+      </div>
+
+      <div class="form-section">
+        <label>Joker Type:</label>
+        <div class="checkbox-group">
+           <label><input type="radio" name="jokerType" value="plusMult"> +Mult</label>
+           <label><input type="radio" name="jokerType" value="xMult"> xMult</label>
+           <label><input type="radio" name="jokerType" value="chips"> Chips</label>
+           <label><input type="radio" name="jokerType" value="econ"> Econ</label>
+           <label><input type="radio" name="jokerType" value="util"> Util</label>
+</div>
+      </div>
+
+      <div class="form-section">
+        <label>Joker Rarity:</label>
+        <div class="checkbox-group">
+          <label><input type="radio"> Common</label>
+          <label><input type="radio"> Uncommon</label>
+          <label><input type="radio"> Rare</label>
+          <label><input type="radio"> Legendary</label>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+</html>
